# CSocket

./: CMakeLists.txt  readme.md
include/: Client.h  Server.h  socketUtil.h
src/: Client.cpp  ClientMain.cpp  Server.cpp  ServerMain.cpp
